<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/title_home"
            />

        <item
            android:id="@+id/navigation_liked_videos"
            android:icon="@drawable/ic_liked_24"
            android:title="@string/title_liked_videos"
            />

        <item
            android:id="@+id/navigation_favorites"
            android:icon="@drawable/ic_star_24"
            android:title="@string/nav_favorites"
            />
        <item
            android:id="@+id/navigation_search"
            android:icon="@drawable/ic_search_24"
            android:title="@string/title_search"
            />
    </group>

</menu>