<resources>
    <!-- Common -->
    <string name="app_name">Tuyo</string>
    <string name="title_home">Home</string>
    <string name="title_liked_videos">Liked Videos</string>
    <string name="title_search">Search</string>
    <string name="title_playlist_items">Playlist contents</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>
    <string name="google_play_services_not_available">Google Play Services not available or not supported</string>
    <string name="generic_error_message">The following error occurred: %1$s</string>

    <string name="disclaimer">Developed with YouTube</string>

    <!-- Login Screen -->
    <string name="login_button">Login</string>
    <string name="login_title">Tuyo</string>
    <string name="login_subtitle">A playlist manager for Youtube</string>
    <string name="action_logout">Logout</string>
    <string name="nav_favorites">Favorites</string>

    <!-- Playlist Items Fragment -->
    <string name="action_copy">Copy Selected</string>
    <string name="action_cut">Cut Selected</string>
    <string name="action_delete">Delete Selected</string>
    <string name="action_paste">Paste</string>
</resources>